@@ -21,6 +21,7 @@
 ###MATCH_DATE### Marker für Datum des Spiels
 ###MATCH_GOALS_HOME### Marker für Tore des Heimteams nach Spielende
 ###MATCH_GOALS_GUEST### Marker für Tore des Gastteams nach Spielende
+###MATCH_DCRESULTSUFFIX### Marker Verlängerung und Elfmeterschiessen
 ###MATCH_REPORTLINK### Marker für Link zum Spielbericht
 ###MATCH_TICKERLINK### Marker für Link zum Liveticker
 ###MATCH_GUEST_SHOWTEAMLINK### Link auf die Gastmannschaft
@@ -73,7 +74,7 @@ Spielplan für Schiedsrichter ###REFEREE_DCNAME###
 <!-- ###RESULT_STATUS_1### Ergebnis während des Spiels -->
 
 <!-- ###RESULT_STATUS_2### Ergebnis nach Spielende -->
-###MATCH_REPORTLINK######MATCH_GOALS_HOME###&nbsp;:&nbsp;###MATCH_GOALS_GUEST######MATCH_REPORTLINK###
+###MATCH_REPORTLINK######MATCH_GOALS_HOME###&nbsp;:&nbsp;###MATCH_GOALS_GUEST### ###MATCH_DCRESULTSUFFIX######MATCH_REPORTLINK###
 <!-- ###RESULT_STATUS_2### Ergebnis nach Spielende -->
 <br />###MATCH_ADDINFO###
 </td>
